# Smart_Actuator_pkgs-

./: .gitmodules  README.md  flake.nix
Controller/1DOF/: Actuator.cc  Actuator.hpp  CMakeLists.txt  Controller.cc  Integrate.cc  Integrate.hpp  Kinematics.hpp  filter.hpp  main.cc  package.xml
Controller/1DOF/Trajectory/: Trajectory.cc
Controller/1DOF/ethercat/: ecat_func.cc  ecat_func.hpp
Controller/1DOF/evl_func/: rt_func.cc  rt_func.hpp
Controller/1DOF/ros_interface/: ros_interface.cpp  ros_interface.hpp
Controller/1DOF/state_manager/: data_mutex.hpp  double_buffer.hpp  inter_process_state_manager.hpp  intra_process_state_manager.hpp  process_shared_data.hpp
Controller/2DOF/: Actuator.hpp  Controller.hpp  Integrate.cc  Integrate.hpp  Kinematics.cc  filter.cc  filter.hpp  main.cc
Controller/2DOF/Trajectory/: Trajectory.hpp
Controller/2DOF/ethercat/: ecat_func.cc
Controller/2DOF/ros_interface/: ros_interface.cpp  ros_interface_node.cpp
Controller/2DOF/state_manager/: data_mutex.hpp  process_shared_data.hpp
assets/model/urdf/: one_leg.urdf
gui/: CMakeLists.txt  default.nix  package.xml  plugin.xml  setup.py
gui/include/mcl_quadruped_gui/: mcl_quadruped_gui.hpp
gui/resource/: mcl_quadruped_gui.ui  resources.qrc
gui/scripts/: mcl_quadruped_gui
gui/src/mcl_quadruped_gui/: mcl_quadruped_gui.cpp
install/: local_setup.sh  setup.sh
install/mcl_quadruped_msgs/share/mcl_quadruped_msgs/: package.bash  package.zsh
install/simple_mujoco_ros2_interface/share/simple_mujoco_ros2_interface/: package.bash  package.zsh
log/: latest_build
msgs/: CMakeLists.txt  default.nix  package.xml
msgs/msg/: ActuatorState.msg  ControllerState.msg  GuiCommand.msg
mujoco/: CMakeLists.txt
mujoco/mujoco-3.3.1/One-Leg/: CMakeLists.txt  main.cc
mujoco/mujoco-3.3.1/One-Leg/data/: OneLeg.m  data.csv  setFigurePositions.m
mujoco/mujoco-3.3.1/One-Leg/robot/: Integrate.cc  Integrate.hpp
mujoco/mujoco-3.3.1/One-Leg/robot/Action/: Actuator.cc  Actuator.hpp  Controller.cc  Controller.hpp
mujoco/mujoco-3.3.1/One-Leg/robot/Motion/: Kinematics.cc  Kinematics.hpp  Trajectory.cc  Trajectory.hpp
mujoco/mujoco-3.3.1/One-Leg/robot/State/: FSM.cc  FSM.hpp  Sensordata.cc  Sensordata.hpp
mujoco/mujoco-3.3.1/One-Leg/simulate/: simulate.cc
mujoco/mujoco-3.3.1/One-Leg/util/: EventTrigger.hpp  dataLogging.cc  dataLogging.hpp  globals.hpp
mujoco/mujoco-3.3.1/One-Leg/xml/: one_leg.xml
mujoco/mujoco-3.3.1/simulate/: simulate.cc
mujoco/src/simple_mujoco_ros2_interface/: .simple_mujoco_ros2_interface.cpp.swp  simple_mujoco_ros2_interface_node.cpp
mylib/: CMakeLists.txt  default.nix
mylib/cmake/: mylibConfig.cmake.in
mylib/ethercat/: README.md
mylib/ethercat/include/: ecat_data.hpp  ecat_device_control_objects.hpp  ecat_hardware_interface.hpp
mylib/ethercat/src/: ecat_device_control_objects.cpp  ecat_hardware_interface.cpp
mylib/utilities/include/: parameter_loader.hpp  utils.hpp
mylib/utilities/src/: parameter_loader.cpp  utils.cpp
