<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcl_quadruped_msgs</name>
  <version>0.0.0</version>
  <description>
    Message Interface for Control
  </description>
  <maintainer email="jwhong1209@gmail.com">Hong</maintainer>
  <author email="jwhong1209@gmail.com">Hong</author>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>python_cmake_module</build_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python_cmake_module</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
