<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Xenomai4</name>
  <version>0.0.0</version>
  <description>Controller</description>
  <maintainer email="hn05198@gmail.com">Jinsong Hong</maintainer>
  <license>TODO</license>
  <author email="hn05198@gmail.com">Jinsong Hong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>joy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mcl_quadruped_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
